2008-06-13  kitone  <kitone@gna.org>

	* src/actions/DeleteSubtitleSelect.cc:
	* src/actions/DocumentManagement.cc:
	* src/actions/JoinDocument.cc:
	* src/utility.h:
	Fix: gettext plurar support patch by petr pisar.

2008-06-12  kitone  <kitone@gna.org>

	* configure.in:
	Add Russian translation.

2008-06-12  kitone  <kitone@gna.org>

	* share/subtitleeditor.desktop:
	Fix: Add %F to Exec.

2008-05-28  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/SubtitleTags.cc:
	* src/SubtitleTags.h:
	* src/formats/SubtitleMicroDVD.cc:
	First work for tags support.

2008-05-26  kitone  <kitone@gna.org>

	* Makefile.am:
	* configure.in:
	* docs/Makefile.am:
	* docs/subtitleeditor.1:
	Add manpage.

2008-05-21  kitone  <kitone@gna.org>

	* share/subtitleeditor.desktop:
	Fix Categories.

2008-05-20  kitone  <kitone@gna.org>

	* configure.in:
	Switching back to development version.

2008-05-20  kitone  <kitone@gna.org>

	* NEWS:
	* configure.in:
	Preparing 0.21.1 release.

2008-05-20  kitone  <kitone@gna.org>

	* src/utility.cc:
	Display an error message if check_registry failed.

	* src/vp/GStreamerPlayer.cc:
	* src/we/WaveformGenerator.cc:
	Better error message when an gstreamer element is missing.

2008-05-18  kitone  <kitone@gna.org>

	* src/Makefile.am:
	* src/SubtitleSystem.cc:
	* src/formats/SubtitleTimedText.cc:
	* src/formats/SubtitleTimedText.h:
	Add new format "Timed Text (TT) Authoring Format 1.0".

	* src/main.cc:
	Fix default config.

	* src/utility.cc:
	Improve gstreamer plugins missing message.

2008-05-18  kitone  <kitone@gna.org>

	* share/glade/dialog-preferences.glade:
	* share/glade/dialog-view-manager.glade:
	Fix: Don't translate gtk-*.
	
	* src/actions/ExternalVideoPlayer.cc:
	Display a message if the  launch of the external player failed.

2008-05-16  kitone  <kitone@gna.org>

	* TODO:
	Update.

2008-05-14  kitone  <kitone@gna.org>

	* src/gui/Application.cc:
	Check exception with set_icon_from_file.
	(https://gna.org/bugs/?11449)
